--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap");
 body {
-	font-family: "Poppins", sans-serif;
+	font-family: "Poppins", sans-serif !important;
 	position: relative;
 	margin: 0;
 	font-size: 1rem;
@@ -194,7 +194,7 @@ pre,
 code,
 kbd,
 samp {
-	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+	font-family: "Poppins", sans-serif !important;SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
 		"Courier New", monospace;
 	font-size: 1em;
 }
@@ -255,7 +255,7 @@ select,
 optgroup,
 textarea {
 	margin: 0;
-	font-family: inherit;
+	font-family: "Poppins", sans-serif !important;
 	font-size: inherit;
 	line-height: inherit;
 }
@@ -6882,7 +6882,7 @@ a.close.disabled {
 	z-index: 1070;
 	display: block;
 	margin: 0;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Poppins", sans-serif !important;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 1.5;
@@ -7007,7 +7007,7 @@ a.close.disabled {
 	z-index: 1060;
 	display: block;
 	max-width: 276px;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Poppins", sans-serif !important;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 1.5;
@@ -11021,8 +11021,7 @@ button.bg-dark:focus {
 }
 
 .text-monospace {
-	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-		"Courier New", monospace !important;
+	font-family: "Poppins", sans-serif !important;
 }
 
 .text-justify {
@@ -11455,12 +11454,7 @@ h4,
 h5,
 h6 {
 	font-weight: 500;
-	font-family: "Baloo Paaji", cursive;
 	color: #695aa6;
-}
-
-.my-font {
-	font-family: "Baloo Paaji", cursive;
 }
 
 p {
@@ -12022,7 +12016,7 @@ pre .code {
 	align-items: center;
 	-webkit-transition: all, 0.3s;
 	transition: all, 0.3s;
-	font-family: "Baloo Paaji", cursive;
+	font-family: "Montserrat", sans-serif !important;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -12034,6 +12028,8 @@ pre .code {
 
 .custom-navbar .logo {
 	font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1300 - 300)));
+	font-family: "Montserrat", sans-serif !important;
+	font-weight: bold;
 	text-decoration: none;
 	color: #fff;
 }
@@ -12469,7 +12465,7 @@ pre .code {
 	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-	background-image: url(../imgs/header.jpg);
+	background-image: url(assets/images/header.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -12518,13 +12514,14 @@ pre .code {
 	margin-bottom: 0;
 	position: relative;
 	display: block;
+	font-family: "Montserrat", sans-serif !important;
 }
 
 .header .header-content .header-subtitle {
 	font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
 	letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300)));
 	opacity: 0.8;
-	margin-top: -10px;
+	margin-top: -5px;
 	margin-bottom: 20px;
 }
 
