--- a/style.css
+++ b/style.css
@@ -194,8 +194,7 @@ pre,
 code,
 kbd,
 samp {
-	font-family: "Poppins", sans-serif !important;SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-		"Courier New", monospace;
+	font-family: "Poppins", sans-serif !important;
 	font-size: 1em;
 }
 
