--- a/style.css
+++ b/style.css
@@ -12504,7 +12504,7 @@ pre .code {
 }
 
 .header .header-content .header-title .up {
-	font-size: calc(30px + (60 - 30) * ((100vw - 300px) / (1300 - 300)));
+	font-size: calc(5px + (60 - 30) * ((100vw - 300px) / (1300 - 300)));
 	font-weight: 500;
 	color: #444;
 	margin-bottom: 5px;
@@ -12513,7 +12513,7 @@ pre .code {
 }
 
 .header .header-content .header-title .down {
-	font-size: calc(30px + (75 - 30) * ((100vw - 300px) / (1300 - 300)));
+	font-size: calc(25px + (75 - 30) * ((100vw - 300px) / (1300 - 300)));
 	margin-bottom: 0;
 	position: relative;
 	display: block;
@@ -12521,11 +12521,13 @@ pre .code {
 }
 
 .header .header-content .header-subtitle {
-	font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
+	font-size: calc(16px + (22 - 10) * ((100vw - 300px) / (1300 - 300)));
 	letter-spacing: calc(1px + (7 - 1) * ((100vw - 300px) / (1300 - 300)));
 	opacity: 0.8;
-	margin-top: -5px;
+	margin-top: 20px;
 	margin-bottom: 20px;
+	font-weight: 700;
+	color: var(--primary);
 }
 
 .header .header-content .btn {
